--- a/returnScaledImage/appsettings.json
+++ b/returnScaledImage/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ImageSizeOptions": {
+    "Sizes": [
+      {
+        "Width":1280,
+        "Height":720
+      }
+    ]
+  
+  }
 }
